--- a/in-progress.Rmd
+++ b/in-progress.Rmd
@@ -19,6 +19,8 @@ library(kableExtra)
 library(psych)
 library(stats)
 library(ggstatsplot)
+library(interactions) #Moved from coding chunk to this hidden setup chunk. Best to keep all library() code together so people can easily see all the packages you used.
+library(car) #Moved from coding chunk to this hidden setup chunk. Best to keep all library() code together so people can easily see all the packages you used.
 ```
 
 # Research Question
@@ -425,7 +427,6 @@ By_Sex %>%
 ### Math scores by Mother Education and Race
 
 ```{r ANOVA, warning=FALSE, message=FALSE}
-library(car)
 math_mod <- lm(MATH ~ 1 + MOTHED*RACE, data = els_viz)
 Anova(math_mod, type = 3)
 ```
@@ -527,8 +528,7 @@ Now let's try to visualize this, it might get messy.
 
 ```{r}
 # Visualization of regression models for mother's education and race
-#install.packages("interactions")
-library(interactions)
+#install.packages("interactions") #Keep all your library code in the setup chunk
 cat_plot(mod_moth_race, pred = MOTHED, modx = RACE, geom = "line", interval = FALSE,vary.lty = TRUE)
 
 ```
