--- a/in-progress.Rmd
+++ b/in-progress.Rmd
@@ -18,7 +18,7 @@ library(ggridges)
 library(kableExtra)
 library(psych)
 library(stats)
-#library(ggstatsplot)
+library(ggstatsplot)
 ```
 # Introduction
 ### The data set that we chose comes from the IES National Center for Education Statistics. The specific study is titled *Education Longitudinal Study of 2002* or ELS:2002. 
