--- a/in-progress.Rmd
+++ b/in-progress.Rmd
@@ -22,9 +22,9 @@ library(ggstatsplot)
 #when installing say no to the prompt 
 ```
 # Introduction
-### The data set that we chose comes from the IES National Center for Education Statistics. The specific study is titled *Education Longitudinal Study of 2002* or ELS:2002. 
-### ELS:2002 represents a major longitudinal effort designed to provide trend data about critical transitions experienced by students as they proceed through high school and into postsecondary education. The 2002 sophomore cohort was followed, initially at 2-year intervals, to collect policy-relevant data about educational processes and outcomes. These data focus on areas of student learning, student tragectories, student persistence and access to college, as well as entry into the workforce.
-### The baseline year for the study was Spring term 2002. A national sample of high school sophomores were surveyed along with their parents, teachers, adminstrators, and librarians. The first follow-up took place two years later in 2004. Students who remained in the same school for both 2002 and 2004 were resurveyed and tested in multiple areas including mathmatics. Students that did not attend the same school for any reason (i.e. transferred, dropped out, early graduation) were adminstered a questionnaire. Demographic information was collected for both groups along with academic scores. 
+**The data set that we chose comes from the IES National Center for Education Statistics. The specific study is titled *Education Longitudinal Study of 2002* or ELS:2002.**
+**ELS:2002 represents a major longitudinal effort designed to provide trend data about critical transitions experienced by students as they proceed through high school and into postsecondary education. The 2002 sophomore cohort was followed, initially at 2-year intervals, to collect policy-relevant data about educational processes and outcomes. These data focus on areas of student learning, student tragectories, student persistence and access to college, as well as entry into the workforce.**
+**The baseline year for the study was Spring term 2002. A national sample of high school sophomores were surveyed along with their parents, teachers, adminstrators, and librarians. The first follow-up took place two years later in 2004. Students who remained in the same school for both 2002 and 2004 were resurveyed and tested in multiple areas including mathmatics. Students that did not attend the same school for any reason (i.e. transferred, dropped out, early graduation) were adminstered a questionnaire. Demographic information was collected for both groups along with academic scores.**
 
 # Research Question
 **Do the teacher's reported student math scores across the two timepoints (i.e., base year and first follow-up) correlate with 1) students' sex, 2) students' race/ethnicity, and 3) mother's highest education level of students?**
@@ -530,10 +530,16 @@ mothed_pval %>%
 ## Mother Education / Race Regression  
 I am not sure how to do a regression analysis of all three variables, but I can look at the regression analysis of math scores based on race/ethnicity and mother's education.   
 
-```{r regression mother edu and race}
+```{r regression mother edu and race, fig.width=20}
 mod_moth_race <- lm(MATH ~ 1 + MOTHED*RACE, data = els_viz)
-summary(mod_moth_race)
+#summary(mod_moth_race)
+library(needs)
+needs(sjPlot, sjmisc, sjlabelled)
+library(sjPlot)
+library(sjmisc)
+library(sjlabelled)
 
+tab_model(mod_moth_race)
 ```
 
 ### Mother Edu / Race Regression Visualization  
@@ -555,3 +561,13 @@ This allows for the error bars to be included but crowds the data and makes anal
 cat_plot(mod_moth_race, pred = MOTHED, modx = RACE, geom = "bar")
 
 ```
+
+## Regression of Race and Math score
+
+```{r regression race}
+
+
+```
+
+
+contrasts(els_viz$RACE)
