Formatting Tukey's comparison Mother's education
Last push. I noticed that the labels weren't showing up for the comparison. Now all the labels should show up.

--- a/in-progress.Rmd
+++ b/in-progress.Rmd
@@ -444,7 +444,7 @@ By_Sex %>%
 
 # More Statistics
 ## ANOVA Results
-### Math scores by Mother Education and Race
+### ANOVA Math scores by Mother Education and Race
 
 ```{r ANOVA, warning=FALSE, message=FALSE}
 library(car)
@@ -452,8 +452,34 @@ math_mod <- lm(MATH ~ 1 + MOTHED*RACE, data = els_viz)
 Anova(math_mod, type = 3)
 ```
 
+### Post Hoc Tukeys HSD Race and Mother's education
+#### Tukeys HSD Race Pairs
+```{r pairwise comparison viz, fig.height= 50, fig.width= 12}
+aovRace <-  aov(MATH ~ RACE,data=els_viz)
+tukey_race <- TukeyHSD(aovRace,conf.level = 0.95)
+
+# Visualization of Tukeys HSD pairwise comparisons by race
+plot(tukey_race, col = "brown")
+
+# Let's look if Mother's education is a predictor. Did not finish high school is the reference group
+#contrasts(els_viz$MOTHED)
+
+```
+
+#### Tukeys HSD Mother's Ed pairs
+```{r, fig.height= 100, fig.width= 12}
+aovMothed <-  aov(MATH ~ MOTHED,data=els_viz)
+tukey_mothed <- TukeyHSD(aovMothed,conf.level = 0.95)
+
+# Visualization of Tukeys HSD pairwise comparisons by race
+plot(tukey_mothed, col = "red")
+
+# Let's look if Mother's education is a predictor. Did not finish high school is the reference group
+#contrasts(els_viz$MOTHED)
+```
+
 ## Student's T test Analysis
-### Difference in scores between year 1-2
+#### Difference in scores between year 1-2
 
 ```{r t_test}
 #str(els_viz)
@@ -509,19 +535,6 @@ race_pval %>%
   
 # Based on this, most groups are significantly different **except** for black/Native, Hispanic/Hispanic (Race specified), Native/Hispanic, Native/Hispanic (Race specified)
 
-aovRace <-  aov(MATH ~ RACE,data=els_viz)
-tukey_race <- TukeyHSD(aovRace,conf.level = 0.95)
-```
-
-### Visualization of Tukeys Pairwise Comparison
-
-```{r pairwise comparison viz, fig.height= 50, fig.width= 12}
-# Visualization of Tukeys HSD pairwise comparisons by race
-plot(tukey_race, col = "brown")
-
-# Let's look if Mother's education is a predictor. Did not finish high school is the reference group
-#contrasts(els_viz$MOTHED)
-
 mod_mothed <- lm(MATH ~ 1 + MOTHED, els_viz)
 tab_model(mod_mothed)
 # This just tells us that groups are significantly different from each other
@@ -541,7 +554,7 @@ mothed_pval %>%
 ```
 
 
-## Mother Education / Race Regression  
+### Mother Education / Race Regression  
 I am not sure how to do a regression analysis of all three variables, but I can look at the regression analysis of math scores based on race/ethnicity and mother's education.   
 
 ```{r regression mother edu and race, fig.width=20}
