--- a/in-progress.Rmd
+++ b/in-progress.Rmd
@@ -22,20 +22,19 @@ library(ggstatsplot)
 #when installing say no to the prompt 
 library(multcompView)
 # visualizing the Tukeys pairwise comparison
-library(sjPlot)
-library(sjmisc)
-library(sjlabelled)
+#library(sjPlot)
+#library(sjmisc)
+#library(sjlabelled)
 #These three are for the regression table to make it easier to read
 library(interactions)
 #This is for the graph of the interaction plot between race and mother's education
 ```
 # Introduction
-**The data set that we chose comes from the IES National Center for Education Statistics. The specific study is titled *Education Longitudinal Study of 2002* or ELS:2002.**
-**ELS:2002 represents a major longitudinal effort designed to provide trend data about critical transitions experienced by students as they proceed through high school and into postsecondary education. The 2002 sophomore cohort was followed, initially at 2-year intervals, to collect policy-relevant data about educational processes and outcomes. These data focus on areas of student learning, student tragectories, student persistence and access to college, as well as entry into the workforce.**
-**The baseline year for the study was Spring term 2002. A national sample of high school sophomores were surveyed along with their parents, teachers, adminstrators, and librarians. The first follow-up took place two years later in 2004. Students who remained in the same school for both 2002 and 2004 were resurveyed and tested in multiple areas including mathmatics. Students that did not attend the same school for any reason (i.e. transferred, dropped out, early graduation) were adminstered a questionnaire. Demographic information was collected for both groups along with academic scores.**
+#### The data set that we chose comes from the IES National Center for Education Statistics. The specific study is titled *Education Longitudinal Study of 2002* or ELS:2002.
+#### ELS:2002 represents a major longitudinal effort designed to provide trend data about critical transitions experienced by students as they proceed through high school and into postsecondary education. The 2002 sophomore cohort was followed, initially at 2-year intervals, to collect policy-relevant data about educational processes and outcomes. These data focus on areas of student learning, student tragectories, student persistence and access to college, as well as entry into the workforce.
+#### The baseline year for the study was Spring term 2002. A national sample of high school sophomores were surveyed along with their parents, teachers, adminstrators, and librarians. The first follow-up took place two years later in 2004. Students who remained in the same school for both 2002 and 2004 were resurveyed and tested in multiple areas including mathmatics. Students that did not attend the same school for any reason (i.e. transferred, dropped out, early graduation) were adminstered a questionnaire. Demographic information was collected for both groups along with academic scores.
 
-# Research Question
-**Do the teacher's reported student math scores across the two timepoints (i.e., base year and first follow-up) correlate with 1) students' sex, 2) students' race/ethnicity, and 3) mother's highest education level of students?**
+#### The aim of our project was to  discern the following: **Do the teacher's reported student math scores across the two timepoints (i.e., base year and first follow-up) correlate with 1) students' sex, 2) students' race/ethnicity, and 3) mother's highest education level of students?**
 
 # Data Information
 ## Variables
@@ -524,7 +523,7 @@ ggwithinstats(data = els_viz, x = YEAR, y = MATH,
 # Looks like I set white as the reference earlier.  
 
 mod_race <- lm(MATH ~ 1 + RACE, els_viz)
-tab_model(mod_race)
+#tab_model(mod_race)
 # This just tells us that all groups are significantly different from each other
 # I think we could report pairwise comparisons
 
@@ -541,7 +540,7 @@ race_pval %>%
 # Based on this, most groups are significantly different **except** for black/Native, Hispanic/Hispanic (Race specified), Native/Hispanic, Native/Hispanic (Race specified)
 
 mod_mothed <- lm(MATH ~ 1 + MOTHED, els_viz)
-tab_model(mod_mothed)
+#tab_model(mod_mothed)
 # This just tells us that groups are significantly different from each other
 # I think we could report pairwise comparisons
 
@@ -566,7 +565,7 @@ I am not sure how to do a regression analysis of all three variables, but I can 
 mod_moth_race <- lm(MATH ~ 1 + MOTHED*RACE, data = els_viz)
 #summary(mod_moth_race)
 
-tab_model(mod_moth_race)
+#tab_model(mod_moth_race)
 ```
 
 ### Mother Edu / Race Regression Visualization  
